--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -5,13 +5,100 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
+    <link
+      rel="stylesheet"
+      href="node_modules/simplelightbox/dist/simple-lightbox.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <section>
       <a href="./index.html">Go to home</a>
-      <h1>Welcome to page 2</h1>
+      <ul class="gallery">
+        <li class="gallery-item">
+          <a class="gallery-link" href="large-image.jpg">
+            <img
+              class="gallery-image"
+              src="small-image.jpg"
+              alt="Image description"
+            />
+          </a>
+        </li>
+        <li class="gallery-item">
+          <a class="gallery-link" href="large-image.jpg">
+            <img
+              class="gallery-image"
+              src="small-image.jpg"
+              alt="Image description"
+            />
+          </a>
+        </li>
+        <li class="gallery-item">
+          <a class="gallery-link" href="large-image.jpg">
+            <img
+              class="gallery-image"
+              src="small-image.jpg"
+              alt="Image description"
+            />
+          </a>
+        </li>
+        <li class="gallery-item">
+          <a class="gallery-link" href="large-image.jpg">
+            <img
+              class="gallery-image"
+              src="small-image.jpg"
+              alt="Image description"
+            />
+          </a>
+        </li>
+        <li class="gallery-item">
+          <a class="gallery-link" href="large-image.jpg">
+            <img
+              class="gallery-image"
+              src="small-image.jpg"
+              alt="Image description"
+            />
+          </a>
+        </li>
+        <li class="gallery-item">
+          <a class="gallery-link" href="large-image.jpg">
+            <img
+              class="gallery-image"
+              src="small-image.jpg"
+              alt="Image description"
+            />
+          </a>
+        </li>
+        <li class="gallery-item">
+          <a class="gallery-link" href="large-image.jpg">
+            <img
+              class="gallery-image"
+              src="small-image.jpg"
+              alt="Image description"
+            />
+          </a>
+        </li>
+        <li class="gallery-item">
+          <a class="gallery-link" href="large-image.jpg">
+            <img
+              class="gallery-image"
+              src="small-image.jpg"
+              alt="Image description"
+            />
+          </a>
+        </li>
+        <li class="gallery-item">
+          <a class="gallery-link" href="large-image.jpg">
+            <img
+              class="gallery-image"
+              src="small-image.jpg"
+              alt="Image description"
+            />
+          </a>
+        </li>
+      </ul>
     </section>
-    <script type="module" src="./js/1-gallery.js"></script>
+    <!-- <script src="node_modules/simplelightbox/dist/simple-lightbox.min.js"></script>
+    <script type="module" src="./js/1-gallery.js"></script> -->
   </body>
 </html>
