--- a/src/2-form.html
+++ b/src/2-form.html
@@ -10,15 +10,15 @@
     <form class="feedback-form" autocomplete="off">
       <label class="email-style">
         Email
-        <input type="email" name="email" autofocus />
+        <input class="email-input-style" type="email" name="email" autofocus />
       </label>
-      <label class="textarea-style">
+      <label class="message-style">
         Message
-        <textarea name="message" rows="8"></textarea>
+        <textarea class="textarea-style" name="message" rows="8"></textarea>
       </label>
-      <button type="submit">Submit</button>
+      <button class="button" type="submit">Submit</button>
     </form>
 
-    <script src="./js/2-form.js"></script>
+    <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
