--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -2,103 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gallery</title>
-    <link
-      rel="stylesheet"
-      href="node_modules/simplelightbox/dist/simple-lightbox.min.css"
-    />
+    <title>Image Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <section>
-      <a href="./index.html">Go to home</a>
-      <ul class="gallery">
-        <li class="gallery-item">
-          <a class="gallery-link" href="large-image.jpg">
-            <img
-              class="gallery-image"
-              src="small-image.jpg"
-              alt="Image description"
-            />
-          </a>
-        </li>
-        <li class="gallery-item">
-          <a class="gallery-link" href="large-image.jpg">
-            <img
-              class="gallery-image"
-              src="small-image.jpg"
-              alt="Image description"
-            />
-          </a>
-        </li>
-        <li class="gallery-item">
-          <a class="gallery-link" href="large-image.jpg">
-            <img
-              class="gallery-image"
-              src="small-image.jpg"
-              alt="Image description"
-            />
-          </a>
-        </li>
-        <li class="gallery-item">
-          <a class="gallery-link" href="large-image.jpg">
-            <img
-              class="gallery-image"
-              src="small-image.jpg"
-              alt="Image description"
-            />
-          </a>
-        </li>
-        <li class="gallery-item">
-          <a class="gallery-link" href="large-image.jpg">
-            <img
-              class="gallery-image"
-              src="small-image.jpg"
-              alt="Image description"
-            />
-          </a>
-        </li>
-        <li class="gallery-item">
-          <a class="gallery-link" href="large-image.jpg">
-            <img
-              class="gallery-image"
-              src="small-image.jpg"
-              alt="Image description"
-            />
-          </a>
-        </li>
-        <li class="gallery-item">
-          <a class="gallery-link" href="large-image.jpg">
-            <img
-              class="gallery-image"
-              src="small-image.jpg"
-              alt="Image description"
-            />
-          </a>
-        </li>
-        <li class="gallery-item">
-          <a class="gallery-link" href="large-image.jpg">
-            <img
-              class="gallery-image"
-              src="small-image.jpg"
-              alt="Image description"
-            />
-          </a>
-        </li>
-        <li class="gallery-item">
-          <a class="gallery-link" href="large-image.jpg">
-            <img
-              class="gallery-image"
-              src="small-image.jpg"
-              alt="Image description"
-            />
-          </a>
-        </li>
-      </ul>
-    </section>
-    <!-- <script src="node_modules/simplelightbox/dist/simple-lightbox.min.js"></script>
-    <script type="module" src="./js/1-gallery.js"></script> -->
+    <ul class="gallery"></ul>
+    <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
